Fix customers display & move menu to outside header wrap, for make free space in panel.
– SAAS-422

--- a/assets/sass/blocks/nav-list.scss
+++ b/assets/sass/blocks/nav-list.scss
@@ -1,6 +1,7 @@
 .nav-list {
     @include clear-list-inline;
     @include clearfix;
+    position: relative;
     &.in-home {
         > li {
             > a {
@@ -26,6 +27,10 @@
     } // &.mobile
     > li {
         float: left;
+        &.logo-box {
+            position: absolute;
+            left: -50px;
+        } // logo-box
         &:not(.logo-box):not(.mobile-trigger):not(.node-conductor) {
             @include bp(xs) {
                 display: none;
@@ -63,6 +68,14 @@
                 display: none;
             } // lightmd
         } // &.add-something
+        &.customer-support {
+            @include bp(sm) {
+                display: none;
+            } // sm
+            @include bp(md) {
+                display: none;
+            } // md
+        } // &.customer-support
         &.customers {
             @include bp(sm) {
                 display: none;
@@ -73,7 +86,7 @@
         } // &.customers
         > a {
             @include property(font-size, 16);
-            @include property(padding, 0 15);
+            @include property(padding, 0 10);
             @include property(padding-top, 13);
             @include property(height, 50);
             display: block;
@@ -131,7 +144,7 @@
                     top: 6px;
                     left: 8px;
                 } // &:before
-            }
+            } // &.support
             &.logo {
                 @include property(width, 50);
                 @include property(height, 50);
@@ -154,6 +167,31 @@
                     font-size: rem(12);
                 } // active-context
             } // &.customer-context
+            &.support {
+                @include inline-middle;
+                width: 30px;
+                height: 30px;
+                // border: 1px solid white;
+                background-color: rgb(130, 176, 70);
+                border-radius: 100%;
+                padding: 0;
+                position: relative;
+                top: 10px;
+                margin: 0 5px;
+                color: #9ECF5D;
+                &:hover, &.active {
+                    background-color: #FDD11D;
+                    color: black;
+                } // &:hover, &.active
+                &:before {
+                    @include icon-fa;
+                    content: '\f128';
+                    font-size: 20px;
+                    position: absolute;
+                    top: 6px;
+                    left: 8px;
+                } // &:before
+            } // &.support
             &.user-area {
                 @include property(padding-top, 5);
                 .user-name {
